# lcd1602sdl2sym

./: CMakeLists.txt  FindPackageLCD1602.cmake  README.md  lcd1602sdl02sym.code-workspace
cmake/: lcd1602-config.cmake
lcd1602/: CMakeLists.txt
lcd1602/src/: lcd1602_sdl.c  lcd1602_sdl_old.c  main.c  main011.c  main012.c  utils.c
lcd1602/src/include/: lcd1602_sdl.h  lcd1602_sdl_types.h  utils.h
main/: CMakeLists.txt
main/src/: main.c
resources/: 5x8_lcd_hd44780u_a02.zip:Zone.Identifier
